# RAS-SES-598-Space-Robotics-and-AI

./: .gitignore  LICENSE  README.md
assignments/cart_pole_optimal_control/: README.md  package.xml  setup.cfg  setup.py
assignments/cart_pole_optimal_control/cart_pole_optimal_control/: cart_pole_lqr.py  earthquake_force_generator.py  force_visualizer.py  lqr_controller.py  state_republisher.py
assignments/cart_pole_optimal_control/config/: cart_pole.rviz
assignments/cart_pole_optimal_control/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
assignments/cart_pole_optimal_control/install/inverted_pendulum_optimal_control/lib/inverted_pendulum_optimal_control/: lqr_controller
assignments/cart_pole_optimal_control/install/inverted_pendulum_optimal_control/share/inverted_pendulum_optimal_control/: package.bash  package.dsv  package.xml
assignments/cart_pole_optimal_control/install/inverted_pendulum_optimal_control/share/inverted_pendulum_optimal_control/models/inverted_pendulum/: model.urdf
assignments/cart_pole_optimal_control/launch/: cart_pole.launch.py  cart_pole_gazebo.launch.py  cart_pole_rviz.launch.py
assignments/cart_pole_optimal_control/models/cart_pole/: model.sdf  model.urdf
assignments/cart_pole_optimal_control/urdf/: cart_pole.urdf.xacro
assignments/final_project_code/: frames_2025-05-07_20.42.21.gv
assignments/final_project_code/install/: local_setup.sh  setup.sh
assignments/first_order_boustrophedon_navigator/: README.md  package.xml  setup.py
assignments/first_order_boustrophedon_navigator/config/: boustrophedon_params.yaml
assignments/first_order_boustrophedon_navigator/first_order_boustrophedon_navigator/: boustrophedon_controller.py
assignments/first_order_boustrophedon_navigator/launch/: boustrophedon.launch.py
assignments/first_order_boustrophedon_navigator/scripts/: boustrophedon_controller
assignments/first_order_boustrophedon_navigator/turtlesim_survey_demo/: README.md  setup.py
assignments/inverted_pendulum_assignment/: README.md  package.xml  setup.py
assignments/inverted_pendulum_assignment/inverted_pendulum_assignment/: pendulum_controller.py  pendulum_model.py  safety_monitor.py
assignments/inverted_pendulum_assignment/launch/: pendulum.launch.py
assignments/inverted_pendulum_optimal_control/: README.md  package.xml  setup.cfg  setup.py
assignments/inverted_pendulum_optimal_control/config/: cart_pole.rviz
assignments/inverted_pendulum_optimal_control/install/inverted_pendulum_optimal_control/share/inverted_pendulum_optimal_control/: package.sh  package.zsh
assignments/inverted_pendulum_optimal_control/install/inverted_pendulum_optimal_control/share/inverted_pendulum_optimal_control/launch/: inverted_pendulum.launch.py
assignments/inverted_pendulum_optimal_control/inverted_pendulum_optimal_control/: earthquake_force_generator.py  force_visualizer.py  lqr_controller.py  state_plotter.py  state_republisher.py
assignments/inverted_pendulum_optimal_control/launch/: inverted_pendulum.launch.py  inverted_pendulum_rviz.launch.py
assignments/inverted_pendulum_optimal_control/models/inverted_pendulum/: model.urdf
assignments/state_estimation_assignment/: README.md  package.xml  setup.py
assignments/state_estimation_assignment/launch/: state_estimation.launch.py
assignments/state_estimation_assignment/state_estimation_assignment/: kalman_filter.py  particle_filter.py  sensor_simulator.py
assignments/terrain_mapping_drone_control/: CMakeLists.txt  README.md  READMEASSIGNMENT.md  package.xml  setup.py
assignments/terrain_mapping_drone_control/config/: Default.perspective  drone_viz.rviz  spiral_params.yaml  terrain_mapping_params.yaml
assignments/terrain_mapping_drone_control/launch/: cylinder_landing.launch.py  orbslam.launch.py  rtabmap.launch.py  terrain_mapping.launch.py  visualization.launch.py
assignments/terrain_mapping_drone_control/models/OakD-Lite/: model.sdf
assignments/terrain_mapping_drone_control/models/OakD-Lite-Modify/: model.config  model.sdf
assignments/terrain_mapping_drone_control/models/cylinder/: model.config  model.sdf
assignments/terrain_mapping_drone_control/models/cylinder_short/: model.config  model.sdf
assignments/terrain_mapping_drone_control/models/px4_models/airframes/: 4022_gz_x500_depth_mono  CMakeLists.txt
assignments/terrain_mapping_drone_control/models/px4_models/gz_models/x500_depth_mono/: model.config  model.sdf
assignments/terrain_mapping_drone_control/models/terrain/: model.config  model.sdf
assignments/terrain_mapping_drone_control/models/terrain/meshes/: artburysol175.mtl
assignments/terrain_mapping_drone_control/resource/: terrain_mapping_drone_control
assignments/terrain_mapping_drone_control/scripts/: deploy_px4_model.sh  generate_aruco.py  generate_cylinder_texture.py  setup_px4_model.sh  spiral_trajectory
assignments/terrain_mapping_drone_control/terrain_mapping_drone_control/: __init__.py  aruco_landing.py  aruco_landing_controller.py  aruco_tracker.py  camera_info_publisher.py  cylinder_landing_node.py  dimension_estimator.py  energy_logger.py  estimate.py  feature_tracker.py  geometry_tracker.py  spiral_trajectory.py  takeoff_and_hover.py  terrain_mapping_controller.py
assignments/turtlesim_survey_demo/: README.md  package.xml  setup.cfg
assignments/turtlesim_survey_demo/turtlesim_survey_demo/: lawnmower_controller.py
final_project_code/: README.md
final_project_code/ros2_project/log/: latest_build
lectures/: generate_filter_comparison.py  generate_plots.py  lecture1.aux  lecture1.nav  lecture1.out  lecture1.tex  lecture1.toc  lecture1.vrb  lecture2.aux  lecture2.nav  lecture2.out  lecture2.tex  lecture2.toc  lecture2.vrb
samples/dreams_robot_control/: README.md  package.xml  setup.cfg  setup.py
samples/dreams_robot_control/dreams_robot_control/: circular_trajectory_controller.py
samples/dreams_robot_control/estimation/: monte-carlo-sampling.py  particle_filter.py  population_height_sampling.py
samples/dreams_stereo/: package.xml  setup.cfg  setup.py
src/terrain_mapping_drone_control/: setup.py
(+363 files in other folders)
